# Untitled

./: .gitignore  CMakeLists.txt
res/: HUD-Recovered.psd  longblanklvl.ai  saffron.ai  saffronb.ai  saffronc.ai  saffrond.ai
res/npc/: caves.phb  common.tbl  debug.tbl  global.phb  pv_global.phb
res_edit/: barriers.psd  slopes.psd  types.psd
src/: All_Entities.h  CAnimation.cpp  CApp.cpp  CApp.h  CApp_OnCleanup.cpp  CApp_OnEvent.cpp  CApp_OnInit.cpp  CApp_OnLoop.cpp  CApp_OnMotion.cpp  CApp_OnRender.cpp  CApp_ext.cpp  CArea.cpp  CArea.h  CAsset.cpp  CAsset.h  CAsset_Ext.cpp  CCamera.cpp  CCamera.h  CCinema.cpp  CCinema.h  CCinema_Debug.cpp  CCinema_Debug.h  CConfig.cpp  CConfig.h  CControls.cpp  CControls.h  CDialogue.cpp  CDialogue.h  CDifficulty.cpp  CDifficulty.h  CEntity.cpp  CEntity.h  CEntityData.cpp  CEntityData.h  CEntityIO.cpp  CEntityIO.h  CEntityInfo.cpp  CEntityMod.cpp  CEntityMod.h  CEntityRes.cpp  (+161 more)
src/stage/: CDebug.cpp  CDebug.h  CStage.cpp  CStage.h  CYrai.cpp  CYrai.h
src_edit/: CAnchorScenery.cpp  CAnchorScenery.h  CAnimation.cpp  CAnimation.h  CApp.cpp  CApp.h  CApp_Click.cpp  CApp_Event.cpp  CApp_EventMapEdit.cpp  CApp_EventNpcEdit.cpp  CApp_EventScnEdit.cpp  CApp_Ext.cpp  CApp_Init.cpp  CApp_Loop.cpp  CApp_Motion.cpp  CApp_OnClick.cpp  CApp_OnEvent.cpp  CApp_OnInit.cpp  CApp_OnLoop.cpp  CApp_OnMotion.cpp  CApp_OnRender.cpp  CApp_OnTerminate.cpp  CApp_Render.cpp  CApp_RenderMapEdit.cpp  CApp_RenderNpcEdit.cpp  CApp_RenderScnEdit.cpp  CApp_Terminate.cpp  CArea.cpp  CArea.h  CAreaAlt.cpp  CAreaAlt.h  CArea_OLD.cpp  CArea_OLD.h  CAsset.cpp  CAsset.h  CAsset_Ext.cpp  CButton.cpp  CButton.h  CCamera.cpp  CCamera.h  (+133 more)
